--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+pyHoNBot - an amazing bot
+
 quickstart for windows users:
 download and install python version 2.7.4 ( http://python.org/download )
 download latest code: https://github.com/theli-ua/pyHoNBot/zipball/master
@@ -12,3 +14,5 @@ run honbot.cmd
 
 
 Licensed under the Eiffel Forum License 2
+
+thanks for reading!!
